<resources>
    <string name="app_name">捞金豆</string>
    <string name="login_name">捞金豆</string>
    <string name="login_text_account">请输入账号(手机号)</string>
    <string name="login_text_password">请输入密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_new_register">立即注册</string>
    <string name="login_text_login">登录</string>
    <string name="splash_text">tianmikeji</string>

    <string name="forget_text">手机号</string>
    <string name="forget_verify">验证码</string>
    <string name="forget_input_text">请输入您注册时手机号</string>
    <string name="forget_input_verify">请输入验证码</string>
    <string name="forget_button">下一步</string>
    <string name="get_verify_code">获取验证码</string>

    <string name="change_psd">新密码</string>
    <string name="change_psd_edit">请输入新密码</string>
    <string name="change_psd_confirm">请确认</string>
    <string name="change_psd_confirm_edit">请确认新密码</string>

    <string name="register_phone">请输入手机号</string>
    <string name="register_verify_code">请输入验证码</string>
    <string name="register_button">注册</string>

    <string name="main_search">站内搜索</string>

    <string name="my_wallet">我的钱包</string>
    <string name="my_gold_bean">金豆(颗)</string>
    <string name="my_recommend">我的推荐</string>

</resources>
