<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:src="@drawable/icon_login_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="97dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="9dp"
        android:textColor="@color/login_name"
        android:textSize="17dp"
        android:text="@string/login_name"/>
    <RelativeLayout
        android:layout_width="282dp"
        android:layout_height="21dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:id="@+id/img_phone"
            android:layout_height="21dp"
            android:layout_width="21dp"
            android:src="@drawable/icon_phone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/img_phone"
            android:background="@null"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            android:textColorHint="@color/text_color_6"
            android:hint="@string/register_phone"
            />
    </RelativeLayout>
    <View
        android:layout_width="282dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_line"
        />
    <RelativeLayout
        android:layout_width="282dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:id="@+id/img_verify_code"
            android:layout_height="21dp"
            android:layout_width="21dp"
            android:src="@drawable/icon_verify_code"/>
        <Button
            android:id="@+id/button_verify"
            android:layout_width="83dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/get_verify_code"
            android:textSize="13dp"
            android:textColor="@color/text_color_5"
            android:background="@drawable/selector_button"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColorHint="@color/text_color_6"
            android:layout_toRightOf="@+id/img_verify_code"
            android:layout_toLeftOf="@+id/button_verify"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/register_verify_code"
            />

    </RelativeLayout>
    <View
        android:layout_width="282dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_line"
        />
    <RelativeLayout
        android:layout_width="282dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        >
        <ImageView
            android:id="@+id/img_password"
            android:layout_height="21dp"
            android:layout_width="21dp"
            android:src="@drawable/icon_password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/img_password"
            android:background="@null"
            android:textColorHint="@color/text_color_6"
            android:textSize="14dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/login_text_password"
            />
    </RelativeLayout>
    <View
        android:layout_width="282dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_line"
        />

    <Button
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="86dp"
        android:text="@string/register_button"
        android:textColor="@color/text_color_3"
        android:textSize="16dp"
        android:background="@drawable/shape_button"/>





</LinearLayout>

