<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_3">
    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/background_my">
        <ImageView
            android:id="@+id/img_head"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_marginTop="42dp"
            android:layout_marginLeft="12dp"/>
        <TextView
            android:id="@+id/text_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_head"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="52dp"
            android:text="11111111"/>
        <TextView
            android:id="@+id/text_id_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_head"
            android:layout_marginLeft="11dp"
            android:layout_below="@+id/text_phone_num"
            android:text="11111111"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_recharge"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginTop="121dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_background_white">
        <ImageView
            android:id="@+id/img_wallet"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/icon_wallet"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_wallet"
            android:layout_toRightOf="@+id/img_wallet"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="8dp"
            android:textSize="15dp"
            android:textColor="@color/text_color_7"/>
        <TextView
            android:id="@+id/text_gold_bean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_gold_bean"
            android:layout_below="@+id/img_wallet"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="13dp"
            android:textColor="@color/text_color_8"
            android:textSize="13dp"/>
        <TextView
            android:id="@+id/text_gold_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30000"
            android:layout_below="@+id/text_gold_bean"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/text_color_5"
            android:textSize="19dp"/>
        <Button
            android:id="@+id/btn_recharge"
            android:layout_width="61dp"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_button_2"
            android:layout_marginTop="15dp"
            android:text="充值"
            android:textColor="@color/text_color_3"
            android:textSize="14dp"
            android:layout_marginRight="16dp"/>
        <Button
            android:id="@+id/btn_cash"
            android:layout_width="61dp"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_button_3"
            android:layout_below="@+id/btn_recharge"
            android:layout_marginTop="16dp"
            android:text="提现"
            android:textColor="@color/text_color_3"
            android:textSize="14dp"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/background_color_2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/layout_recharge"/>
    <RelativeLayout
        android:id="@+id/layout_friend"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:background="@color/text_color_3"
        android:layout_below="@+id/view">
        <TextView
            android:id="@+id/text_my_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_recommend"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/text_color_5"
            android:textSize="15dp"/>

        <ImageView
            android:id="@+id/img_recommend"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/icon_my_recommend"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:id="@+id/text_recommend_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_below="@+id/img_recommend"
            android:layout_marginTop="5dp"
            android:text="总计112人"/>
        <ImageView
            android:id="@+id/img_recommend_month"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/icon_my_add"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>
        <TextView
            android:id="@+id/text_recommend_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_recommend"
            android:layout_marginTop="5dp"
            android:text="总计112人"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="78dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_my_right"
            android:layout_toRightOf="@+id/img_recommend_month"
            android:layout_marginLeft="50dp"
            />

        <ImageView
            android:id="@+id/img_add_friend"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/icon_my_friend"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/img_recommend"
            android:text="邀请好友"/>
    </RelativeLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/background_color_2"
        android:layout_below="@+id/layout_friend"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_color_3"
        android:layout_below="@+id/view2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_conduct"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@drawable/icon_my_conduct"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:id="@+id/text_conduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/img_conduct"
                android:textSize="14dp"
                android:textColor="@color/text_color_5"
                android:text="邀请好友"/>
            <ImageView
                android:id="@+id/img_collect"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@drawable/icon_my_collect"
                android:layout_below="@+id/text_conduct"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="60dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/img_collect"
                android:textSize="14dp"
                android:textColor="@color/text_color_5"
                android:text="我的收藏"/>

                        <!-- -->
            <ImageView
                android:id="@+id/img_shop"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@drawable/icon_my_shop"
                android:layout_marginTop="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"/>
            <TextView
                android:id="@+id/text_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/img_shop"
                android:textSize="14dp"
                android:textColor="@color/text_color_5"
                android:text="我的商城"/>
            <ImageView
                android:id="@+id/img_card"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@drawable/icon_my_card"
                android:layout_below="@+id/text_conduct"
                android:layout_marginTop="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/img_card"
                android:textSize="14dp"
                android:textColor="@color/text_color_5"
                android:text="我的卡券"/>
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
